--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
   <body>
     <div id="app"></div>
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
     <script src="client.min.js"></script>
   </body>
 </html>
