--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <title>Hackathon</title>
     <!-- change this up! http://www.bootstrapcdn.com/bootswatch/ -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/cosmo/bootstrap.min.css" type="text/css" rel="stylesheet"/>
     <link type="text/css" rel="stylesheet" href="style/style.css">
 
   </head>
@@ -12,7 +11,11 @@
   <body>
     <div id="app"></div>
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/> 
     <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
     <script src="client.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
   </body>
 </html>
+  
